--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-dom": "^16.12.0",
     "react-google-login": "^5.1.1",
     "react-icons": "^3.9.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
