--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "concurrently": "^5.1.0",
     "http-proxy-middleware": "^1.0.1",
+    "query-string": "^6.11.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
