--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-tiny-popover": "^4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
