--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.12.0",
     "react-google-login": "^5.1.1",
     "react-icons": "^3.9.0",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
