--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-google-login": "^5.1.1",
     "react-icons": "^3.9.0",
     "react-modal": "^3.11.2",
+    "react-notifications": "^1.5.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
